--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Run pester tests
         shell: pwsh
         run: |
-          Set-PSRepository -SourceLocation PSGallery -InstallationPolicy Trusted
+          Set-PSRepository -Name PSGallery -InstallationPolicy Trusted
           Install-Module -Name Pester -RequiredVersion '5.2.2' -Confirm:$false -Force
           Invoke-Pester -Path ./tests/*.tests.ps1 -OutputFile ./test-results.xml -OutputFormat NUnitXml
 
