--- a/.azuredevops/workflows/azure-pipelines.yml
+++ b/.azuredevops/workflows/azure-pipelines.yml
@@ -10,6 +10,14 @@ trigger:
     exclude:
       - README.md
 
+pr:
+  branches:
+    include:
+      - feature/*
+  paths:
+    exclude:
+      - README.md
+
 variables:
   PesterVersion: '5.2.2'
 
